# PW_HW_14

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  middlewares.py  pyproject.toml  test.db
front_end/: index.html  script.js
migrations/: env.py
migrations/versions/: 0cfa773a1804_init.py  211f0454da23_hw14.py  33e7b9446525_add_roles.py  533472f2a90c_mod_contacts.py  579df30083db_add_verificate_mail.py  65870c973d9d_ad_updated_at.py  a269c49c0797_ad_updated_at_2.py  a875641e8274_del_notes.py  b7ed7a08b404_otes_model_fix.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 1259
postgres-data/base/16384/: 1247  1249  1259  16389  16392  16394  16401  16412  16413  16418  16419  16421  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  3501  (+5 more)
postgres-data/base/5/: 1247  1249  1259  2224  24577  24578  24583  24585  24586  24589  24591  24593  24594  24597  24599  24607  24613  24614  24617  24619  24625  24627  24633  (+73 more)
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  mail.py  users.py
src/schemas/: auth.py  contacts.py
src/services/: auth.py  mail.py  role.py
src/static/: index.html
src/templates/: index.html
tests/: conftest.py  test.db  test_e2e_auth.py  test_e2e_contacts.py  test_e2e_users.py  test_unin_src_repository_contacts.py  test_unit_src_reposytory_users.py
(+1 files in other folders)
