[tool.poetry]
name = "pw-hw-14"
version = "0.1.0"
description = ""
authors = ["Weiss1985 <weiss1985@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
requests = "^2.28.1"
xmltodict = "^0.13.0"
redis = "4.*"
fastapi-limiter = "^0.1.6"
jinja2 = "^3.1.3"
cloudinary = "1.37.0"
sphinx = "^7.2.6"
sqlalchemy = "^2.0.28"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
pytest = "^8.0.2"
pydantic = {extras = ["email"], version = "^2.6.3"}
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
fastapi-mail = "^1.4.1"
python-multipart = "^0.0.9"
bcrypt = "^4.1.2"
alembic = "^1.13.1"
pytest-asyncio = "^0.23.5.post1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"


[tool.poetry.group.test.dependencies]
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.23.5.post1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "tests", 
]
pythonpath = "."

filterwarnings = "ignore::DeprecationWarning"